add an options form that writes and reads config options. eventing back to main form to enable/disable Sync command

--- a/SynologyPictureSync/FormOptions.resx
+++ b/SynologyPictureSync/FormOptions.resx
@@ -117,89 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="folderBrowserDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>130, 17</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="notifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAICAAAAAAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAACAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHBwcP8aGhr/CAgI/wQE
-        BP8AAAD/AwMD/woKCv8EBAT/BAQE/wQEBP8FBQX/BgYG/wQEBP8BAQH/AAAA/wAAAP8AAAD/AQEB/wMD
-        A/8CAgL/AAAA/wAAAP8AAAD/AwMD/wAAAP8GBgb/AQEB/yEhIf9mZmb/AAAAAAAAAAAAAAAAGhoa/wAA
-        AP8AAAD/BQUF/wICAv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8EBAT/DQ0N/wEB
-        Af8AAAD/AAAA/wEBAf8AAAD/AAAA/wAAAP8AAAD/AwMD/wEBAf8AAAD/AAAA/xoaGv8AAAAAAAAAAAAA
-        AAAAAAD/AgIC/wEBAf8AAAD/AAAA/wEBAf8CAgL/AAAA/wAAAP8AAAD/AAAA/wMDA/8ZGRn/OTk5/1FR
-        Uf8wMDD/FRUV/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8DAwP/AAAA/wUFBf8AAAD/AAAA/wAA
-        AAAAAAAAAAAAAAICAv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/BgYG/wAAAP8XFxf/paWl//X1
-        9f/+/v7//v7+//v7+//5+fn/oqKi/xkZGf8AAAD/AgIC/wQEBP8AAAD/AAAA/wAAAP8AAAD/AgIC/wAA
-        AP8AAAD/AAAAAAAAAAAAAAAAAgIC/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/PDw8/9vb
-        2//9/f3/9PT0/7Gxsf+enp7/vb29//X19f/6+vr/3Nzc/zc3N/8AAAD/AAAA/wEBAf8AAAD/AAAA/wAA
-        AP8CAgL/AAAA/wAAAP8AAAAAAAAAAAAAAAACAgL/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AwMD/xcX
-        F//Pz8///v7+/7S0tP8fHx//EhIS/wAAAP8AAAD/JCQk/6qqqv/+/v7/0tLS/xEREf8GBgb/AAAA/wAA
-        AP8AAAD/AAAA/wICAv8AAAD/AAAA/wAAAAAAAAAAAAAAAAICAv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/h4eH//n5+f+9vb3/FRUV/wAAAP8AAAD/AAAA/wAAAP8AAAD/EhIS/7i4uP/6+vr/h4eH/wAA
-        AP8FBQX/AAAA/wAAAP8AAAD/AgIC/wAAAP8AAAD/AAAAAAAAAAAAAAAAAgIC/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/woKCv/V1dX//v7+/zY2Nv8AAAD/AAAA/wsLC/8AAAD/AwMD/wAAAP8AAAD/Nzc3//7+
-        /v/W1tb/CgoK/wAAAP8AAAD/AAAA/wAAAP8CAgL/AAAA/wAAAP8AAAAAAAAAAAAAAAACAgL/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/ERER//f39//i4uL/AgIC/wAAAP8DAwP/AAAA/wEBAf8AAAD/AAAA/wUF
-        Bf8CAgL/3Nzc//z8/P8XFxf/AAAA/wAAAP8AAAD/AAAA/wICAv8AAAD/AAAA/wAAAAAAAAAAAAAAAAIC
-        Av8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8cHBz//v7+/9TU1P8AAAD/AAAA/wICAv8AAAD/BAQE/wAA
-        AP8AAAD/AAAA/wAAAP/a2tr//v7+/xoaGv8GBgb/AAAA/wAAAP8AAAD/AgIC/wAAAP8AAAD/AAAAAAAA
-        AAAAAAAAAgIC/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/w4ODv/7+/v/7e3t/w0NDf8AAAD/AAAA/wcH
-        B/8AAAD/AAAA/wYGBv8AAAD/BQUF//X19f/6+vr/DAwM/wAAAP8AAAD/AAAA/wAAAP8CAgL/AAAA/wAA
-        AP8AAAAAAAAAAAAAAAAEBAT/AQEB/wAAAP8CAgL/AAAA/wAAAP8AAAD/BAQE/7e3t//9/f3/ZmZm/wAA
-        AP8DAwP/AAAA/wAAAP8AAAD/AAAA/wMDA/9iYmL/+/v7/76+vv8GBgb/AAAA/wAAAP8HBwf/AAAA/wAA
-        AP8FBQX/AAAA/wAAAAAAAAAAAAAAAAMDA/8AAAD/AAAA/wAAAP8AAAD/AgIC/wUFBf8AAAD/W1tb//j4
-        +P/k5OT/QkJC/wAAAP8AAAD/AwMD/wAAAP8EBAT/ODg4/+Hh4f/+/v7/VVVV/wAAAP8DAwP/BQUF/wAA
-        AP8MDAz/AQEB/wAAAP8HBwf/AAAAAAAAAAAAAAAABAQE/wAAAP8DAwP/AgIC/wEBAf8AAAD/AgIC/wAA
-        AP8GBgb/lZWV//7+/v/d3d3/cnJy/yoqKv8AAAD/IiIi/3Jycv/s7Oz//v7+/4+Pj/8MDAz/AAAA/wMD
-        A/8AAAD/AAAA/wAAAP8FBQX/AAAA/wAAAP8AAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8GBgb/AAAA/wAAAP8eHh7/jIyM//f39//+/v7//Pz8//v7+//9/f3/9fX1//j4+P+IiIj/FBQU/wIC
-        Av8AAAD/AwMD/wAAAP8JCQn/Nzc3/y4uLv8AAAD/BgYG/wAAAAAAAAAAAAAAAAAAAP8FBQX/BgYG/wAA
-        AP8BAQH/AAAA/wAAAP8CAgL/AAAA/wAAAP8FBQX/SUlJ/5GRkf/b29v/9vb2/93d3f+lpaX/SUlJ/woK
-        Cv8AAAD/AAAA/wUFBf8AAAD/BAQE/1xcXP/6+vr/+fn5/zs7O/8AAAD/AAAAAAAAAAAAAAAAAAAA/wAA
-        AP8BAQH/AAAA/wAAAP8QEBD/AAAA/wEBAf8GBgb/CgoK/wAAAP8AAAD/BAQE/xAQEP8AAAD/AAAA/wsL
-        C/8AAAD/AAAA/wEBAf8AAAD/BQUF/wAAAP8AAAD/kZGR//v7+//6+vr/YmJi/wEBAf8AAAAAAAAAAAAA
-        AAAJCQn/AAAA/wAAAP8DAwP/DAwM/5ubm/+bm5v/pqam/5+fn/9fX1//AQEB/wAAAP8AAAD/AAAA/wAA
-        AP8CAgL/AAAA/wAAAP8BAQH/AwMD/wEBAf8AAAD/AwMD/wAAAP8lJSX/oaGh/5eXl/8KCgr/AwMD/wAA
-        AAAAAAAAAAAAACQkJP8AAAD/AAAA/wAAAP8ODg7/8vLy//7+/v/7+/v//v7+/6Kiov8LCwv/AAAA/wAA
-        AP8AAAD/AwMD/wAAAP8DAwP/AAAA/wAAAP8BAQH/BAQE/wAAAP8AAAD/AAAA/wAAAP8CAgL/BAQE/wAA
-        AP8lJSX/AAAAAAAAAAAAAAAAAAAAAJSUlP+FhYX/ERER/xwcHP/x8fH//v7+//v7+//7+/v/np6e/wcH
-        B/9FRUX/hYWF/4KCgv+Ghob/hoaG/4aGhv+Ghob/hoaG/4aGhv+Ghob/hoaG/4aGhv+BgYH/ioqK/4mJ
-        if+Ghob/n5+f/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABMTEz/AAAA/0NDQ/88PDz/Ojo6/z09
-        Pf8ZGRn/AAAA/4+Pj/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHZ2dv8ODg7/CgoK/wAA
-        AP8AAAD/AgIC/wUFBf8jIyP/srKy/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAA//////////////////////////+AAAADgAAAA4AAAAOAAAADgAAAA4AA
-        AAOAAAADgAAAA4AAAAOAAAADgAAAA4AAAAOAAAADgAAAA4AAAAOAAAADgAAAA4AAAAOAAAADwAAAB/AH
-        ///wB/////////////////////////////8=
-</value>
-  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAAAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAACAAAAAAAAAAAAAAAAAAAAAA
